--- a/app/src/main/res/layout/activity_item_twopane.xml
+++ b/app/src/main/res/layout/activity_item_twopane.xml
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/item_list"
-        android:name="com.example.sandeep.test2.ItemListFragment"
+        android:name="com.ship.sandeep.test2.ItemListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
